// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File field render with no value 1`] = `
<div
  className="file-input-container"
>
  <div
    className="file-input"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div>
      {"label":"Upload File"}
    </div>
  </div>
</div>
`;

exports[`File field render with value 1`] = `
<div
  className="file-input-container"
>
  <div
    className="file-display"
  >
    <a
      className="file-link"
      download={true}
      href="/foo"
    >
      File
    </a>
    <p
      className="file-delete"
      onClick={[Function]}
    >
      Delete File
    </p>
  </div>
  <div
    className="file-input"
    style={
      Object {
        "width": "75%",
      }
    }
  >
    <div>
      {"label":"Upload File"}
    </div>
  </div>
</div>
`;
